--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,14 @@
 {
 	"name": "Default Linux Universal",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/universal:2-linux",
-	"features": {
+	//"image": "mcr.microsoft.com/devcontainers/universal:2-linux",
+	
+	"build": {
+        // Path is relative to the devcontainer.json file.
+        "dockerfile": "Dockerfile"
+    }
+	
+	/*"features": {
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {
 			"moby": true,
 			"azureDnsAutoDetection": true,
@@ -20,7 +26,7 @@
 		"ghcr.io/devcontainers-contrib/features/node-asdf:0": {
 			"version": "latest"
 		}
-	}
+	}*/
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
